<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.romero.setalarm.MainActivity">

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/welcome_text"
        />
    <TextView
        android:id="@+id/hour_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome_txt"
        android:text="@string/hour"
        />
    <NumberPicker
        android:id="@+id/hour_wll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hour_txt"
        android:divider="@color/colorPrimary"
        android:layout_toStartOf="@id/twp"
        android:layout_toLeftOf="@id/twp">
    </NumberPicker>

    <TextView
        android:id="@+id/twp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_below="@id/hour_txt"
        android:textSize="115sp"
        android:text=":"/>

    <NumberPicker
        android:id="@+id/minute_wll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hour_txt"
        android:divider="@color/colorPrimaryDark"
        android:layout_toEndOf="@id/twp"
        android:layout_toRightOf="@id/twp">
    </NumberPicker>

    <TextView
        android:id="@+id/message_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/hour_wll"
        android:text="@string/insrt_mssg"
        />
    <EditText
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/message_txt"
        android:hint="@string/mssg_hint"
        />

    <Button
        android:id="@+id/set_btn"
        android:onClick="createAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/msg"
        android:layout_centerHorizontal="true"
        android:text="@string/set_alarm"
        />


</RelativeLayout>
